class Apellido{
    private String apellido;
}