class Caracter{

    private String descripcion;
    
}