class EducacionAcademica{
    
}