class Genero{
    
}