class Gusto{
    
}