class Idioma{
    
}