class Nacion{
    
}