class Nombre{

    private String nombre;

    public Nombre(String nombre){
        this.nombre = nombre;
    }
    
}