class Persona{

    private Nombre nombre;
    private Apellido apellido;
    private Edad tiempoDeVida;
    private Persona[] familiares;
    private Persona[] amigos;
    private Caracter caracter;
    private RasgoFisico[] rasgosFisicos;
    private Profesion profesion;
    private Religion religion;
    private EducacionAcademica[] titulosAcademicos;
    private Idioma[] idiomas;
    private Nacion[] nacionalidad;
    private Genero genero;
    
}