class Profesion{
    
}