class RasgoFisico{
    
}