class Religion{
    
}